Fixed header mobile alignment

--- a/css/style.sass
+++ b/css/style.sass
@@ -7,15 +7,21 @@ body
 h1,h2, h3, h4, h5, h6
   font-family: 'Roboto', Roboto, Helvetica, Arial, sans-serif
 
+.logo-grid
+  text-align: center
+  position: relative
+  top: -24px
+
+.nav-grid
+  text-align: center
+
 .menuNav
   border-bottom: 1px solid rgba(255,255,255,0.15)
   padding-bottom: 64px
   margin-bottom: 32px
   a
     color: #fff
-    margin: 2rem
-    &:last-child
-      margin-right: 0
+    margin: 0.5rem
     &:hover
       opacity: .75
 
@@ -47,3 +53,16 @@ h1,h2, h3, h4, h5, h6
     top: 92px
     left: -25%
     background-color: #fff
+
+@media (min-width: 550px)
+  .logo-grid
+    text-align: left
+    position: relative
+    top: auto
+  .nav-grid
+    text-align: right
+  .menuNav
+    a
+      margin: 2rem
+      &:last-child
+        margin-right: 0
